--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,18 @@ annotated-types==0.6.0
 anyio==4.2.0
 black==23.12.1
 click==8.1.7
+dnspython==2.4.2
 exceptiongroup==1.2.0
 fastapi==0.108.0
+greenlet==3.0.3
 h11==0.14.0
 httptools==0.6.1
 idna==3.6
 iniconfig==2.0.0
 isort==5.13.2
+Mako==1.3.0
+MarkupSafe==2.1.3
+motor==3.3.2
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.12.1
@@ -20,6 +25,7 @@ pytest==7.4.4
 python-dotenv==1.0.0
 PyYAML==6.0.1
 sniffio==1.3.0
+SQLAlchemy==2.0.25
 starlette==0.32.0.post1
 tomli==2.0.1
 typing_extensions==4.9.0
